# stockbinz

./: README.md  manage.py  pyproject.toml
home/: admin.py  models.py  tasks.py  urls.py  utils.py  views.py
home/migrations/: 0001_initial.py  0002_rename_contactview_contact.py  0003_auto_20210901_1813.py  0004_quotation.py
static/css/: style.css
stockbinz/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
templates/: base.html  footer.html  navbar.html
templates/email/: mail_template.html
templates/home/: Pricing.html  aboutus.html  clients.html  contact.html  cta.html  header.html  index.html  portfolio.html  questions.html  services.html  skills.html  team.html
