[tool.poetry]
name = "stockbinz"
version = "0.1.0"
description = ""
authors = ["deepak <info.deepakpatidar@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
django-phonenumber-field = {extras = ["phonenumbers"], version = "^5.2.0"}
phonenumbers = "^8.12.31"
redis = "^3.5.3"
django-celery-beat = "^2.2.1"
django-celery-results = "^2.2.0"
celery = "^5.1.2"
google-api-python-client = "^2.19.1"
django-suit = "0.2.15"
oauth2client = "1.5.2"
django-otto-admin = "^0.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
